summary: feat UML

--- a/summary/engineering/模型图.md
+++ b/summary/engineering/模型图.md
@@ -4,4 +4,96 @@
 - 参与者：就是和系统交互的角色（人/系统/其他事物）
 - 用例：系统为参与者提供的功能（用例的名称一般是一个带有动作性的词语）
 
-![截屏2021-12-14 下午2.58.49](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/%E7%94%A8%E4%BE%8B%E5%9B%BE1.png)
+![用例图1](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/%E7%94%A8%E4%BE%8B%E5%9B%BE1.png)
+
+| 项目       | 内容                                                       |
+| ---------- | ---------------------------------------------------------- |
+| 用例名称   | 登录                                                       |
+| 用例ID     | login                                                      |
+| 角色       | 用户                                                       |
+| 用例说明   | 描述用户的登录过程                                         |
+| 前置条件   | 打开网站页面                                               |
+| 基本事件流 | 1.输入用户名和密码 2.点击登录 3.提交登录表单               |
+| 其他事件流 | 1. 用户名为空提示用户名不能为空 2.密码为空提示密码不能为空 |
+| 异常事件流 | 登录超时返回登陆页                                         |
+| 后置条件   | 登录成功，进入个人中心                                     |
+
+
+
+### 类图
+
+- 类图：描述类的静态结构，定义类及描述类之间的关系
+- 组成：类、接口、协作、依赖关系、泛化关系、关联关系、实现关系
+- UML中的表示：UML中，类用矩形来表示。分成三部分，分别是名称、属性、操作
+
+#### 依赖关系
+
+只要在类中用到了另外一个类，那么这两个类之间就存在依赖关系。如果没有对方，连编译都不会通过。
+
+在代码层面上，这种关系的表示是一个类的实例会成为另外一个类实例的属性。
+
+#### 泛化关系
+
+实际上就是继承关系，是一种特殊的依赖关系。
+
+在代码层面上，这种关系的表示就是子类继承父类的关系
+
+#### 实现关系
+
+实际上就是B类实现A类，是一种特殊的依赖关系。
+
+在代码层面上，这种关系的表示就是定义一个接口A，B类去实现它A接口
+
+#### 关联关系
+
+实际上就是类和类之间的关系，是一种特殊的依赖关系。
+
+关联关系比依赖关系强，关联关系具有方向性（可单向也可以双向）。
+
+#### 聚合关系
+
+实际上就是整体和部分的关系，整体与部分可以分开，是一种特殊的关联关系。所以它具有关联关系的方向性和多重性。
+
+聚合关系的整体和部分的生命周期是独立的。
+
+#### 组合关系
+
+实际上也是整体和部分的关系，但是整体与部分不可以分开。
+
+组合关系的整体和部分的生命周期是一致的。
+
+#### 实际案例
+
+![UML类图](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/UML%E7%B1%BB%E5%9B%BE.png)
+
+##### 类图相关图标说明：
+
+1. 一个矩形分成三个部分，从上往下依次是类名、属性、行为
+
+2. “+”号表示public的意思，“-”号表示private的意思。二者属于访问修饰符
+
+3. 属性的冒号后边表示的是该属性的类型（ts写法一样）
+
+4. 方法的冒号后边表示的是该方法的返回值类型（ts写法一样）
+
+5. Person -> Water 这条线表示的就是依赖关系，用虚线+黑箭头表示
+
+6. Staff -> Person 这条线表示的就是泛化关系，用实线+白箭头表示
+
+7. goHome -> Staff 这条线表示的就是实现关系，用黑直线表示
+
+8. Staff -> Company 这条线表示的就是聚合关系，用黑直线+白菱形表示
+
+9. Mouth -> Staff 这条线表示的就是组合关系，用黑直线+ 黑菱形表示
+
+10. Fe -> Be(Boss/Friend) 这条线表示的就是关联关系，用黑直线+ 对比符号表示
+
+    | 对比符号 | 意思           |
+    | -------- | -------------- |
+    | 1 1      | 1 对 1         |
+    | 1 0..*   | 1对0（到多个） |
+    | 1 1..*   | 1对1（到多个） |
+    | 1 0..1   | 1对0 （到1个） |
+    | 1 1..2   | 1对1（到2个）  |
+
+    
