summary: feat UML

--- a/summary/engineering/模型图.md
+++ b/summary/engineering/模型图.md
@@ -64,7 +64,7 @@
 
 #### 实际案例
 
-![UML类图](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/UML%E7%B1%BB%E5%9B%BE.png)
+![UML类图](https://github.com/jaylenchan/learning-summary/blob/main/pic/UML类图.png?raw=true)
 
 ##### 类图相关图标说明：
 
