--- a/summary/engineering/模型图.md
+++ b/summary/engineering/模型图.md
@@ -84,7 +84,7 @@
 
 8. Staff -> Company 这条线表示的就是聚合关系，用黑直线+白菱形表示
 
-9. Mouth -> Staff 这条线表示的就是组合关系，用黑直线+ 黑菱形表示
+9. Foot -> Staff 这条线表示的就是组合关系，用黑直线+ 黑菱形表示
 
 10. Fe -> Be(Boss/Friend) 这条线表示的就是关联关系，用黑直线+ 对比符号表示
 
