--- a/summary/cli/业务脚手架.md
+++ b/summary/cli/业务脚手架.md
@@ -1,3 +1,5 @@
+# 业务脚手架
+
 ## 步骤大览
 
 - 准备工作
@@ -70,7 +72,7 @@
 
 ### 准备规范工具
 
-####   eslint - 代码校验功能
+#### eslint - 代码校验功能
 
 6. 在项目中下载`cnpm i -S eslint`。接着执行`npx eslint --init`。
 
@@ -101,7 +103,7 @@
 
 ### 解析用户参数
 
-7. 当前我们会发现使用`ek-cli`或者`ek-cli --help`命令行输出的都是`main.js`。	这是因为目前我们还没解析出参数--help，因此执行出的效果就跟ek-cli直接去执行效果是一样的。我们想要的效果是输入ek-cli --help的时候解析命令行的参数然后可以给我们在命令行当中输出一些常见命令，这就需要一个npm模块-commander。
+7. 当前我们会发现使用`ek-cli`或者`ek-cli --help`命令行输出的都是`main.js`。 这是因为目前我们还没解析出参数--help，因此执行出的效果就跟ek-cli直接去执行效果是一样的。我们想要的效果是输入ek-cli --help的时候解析命令行的参数然后可以给我们在命令行当中输出一些常见命令，这就需要一个npm模块-commander。
 
 8. 获取用户传入的参数。`process.argv`就可以拿到用户传入的参数。
 
