--- a/summary/design-pattern/模型图.md
+++ b/summary/design-pattern/模型图.md
@@ -1,5 +1,7 @@
-## 模型图
-### 用例图
+# 模型图
+
+## 用例图
+
 - 用例建模：主要用来表达系统的功能需求
 - 参与者：就是和系统交互的角色（人/系统/其他事物）
 - 用例：系统为参与者提供的功能（用例的名称一般是一个带有动作性的词语）
@@ -18,55 +20,53 @@
 | 异常事件流 | 登录超时返回登陆页                                         |
 | 后置条件   | 登录成功，进入个人中心                                     |
 
-
-
-### 类图
+## 类图
 
 - 类图：描述类的静态结构，定义类及描述类之间的关系
 - 组成：类、接口、协作、依赖关系、泛化关系、关联关系、实现关系
 - UML中的表示：UML中，类用矩形来表示。分成三部分，分别是名称、属性、操作
 
-#### 依赖关系
+### 依赖关系
 
 只要在类中用到了另外一个类，那么这两个类之间就存在依赖关系。如果没有对方，连编译都不会通过。
 
 在代码层面上，这种关系的表示是一个类的实例会成为另外一个类实例的属性。
 
-#### 泛化关系
+### 泛化关系
 
 实际上就是继承关系，是一种特殊的依赖关系。
 
 在代码层面上，这种关系的表示就是子类继承父类的关系
 
-#### 实现关系
+### 实现关系
 
 实际上就是B类实现A类，是一种特殊的依赖关系。
 
 在代码层面上，这种关系的表示就是定义一个接口A，B类去实现它A接口
 
-#### 关联关系
+### 关联关系
 
 实际上就是类和类之间的关系，是一种特殊的依赖关系。
 
 关联关系比依赖关系强，关联关系具有方向性（可单向也可以双向）。
 
-#### 聚合关系
+### 聚合关系
 
 实际上就是整体和部分的关系，整体与部分可以分开，是一种特殊的关联关系。所以它具有关联关系的方向性和多重性。
 
 聚合关系的整体和部分的生命周期是独立的。
 
-#### 组合关系
+### 组合关系
 
 实际上也是整体和部分的关系，但是整体与部分不可以分开。
 
 组合关系的整体和部分的生命周期是一致的。
 
-#### 实际案例
+### 实际案例
 
 ![类图](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/类图.png)
 
-##### 类图相关图标说明：
+##### 类图相关图标说明
 
 1. 一个矩形分成三个部分，从上往下依次是类名、属性、行为
 
@@ -95,5 +95,3 @@
     | 1 1..*   | 1对1（到多个） |
     | 1 0..1   | 1对0 （到1个） |
     | 1 1..2   | 1对1（到2个）  |
-
-    
