--- a/note/basic/design-pattern/模型图.md
+++ b/note/basic/design-pattern/模型图.md
@@ -66,7 +66,7 @@
 
 ![类图](https://raw.githubusercontent.com/jaylenchan/learning-summary/main/pic/类图.png)
 
-##### 类图相关图标说明
+#### 类图相关图标说明
 
 1. 一个矩形分成三个部分，从上往下依次是类名、属性、行为
 
